--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-"<h1>Zdravo, svet!</h1>" 
+<!DOCTYPE html>
+<html lang="sr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Moj sajt</title>
+</head>
+<body>
+    <h1>Zdravo, svet!</h1>
+</body>
+</html>
